--- a/index.html
+++ b/index.html
@@ -62,14 +62,26 @@
 
              <div class="box-con">
                 <div class="box-1">
-               <img src="asset/images/Frame (1).png" alt="">
+               <img src="asset/images/Frame (1).png" alt="frame">
                <h4>search doctor</h4>
-               <p class="pra-2">Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
+               <p class="pra-2">Choose your doctor from thousands of specialist, 
+                general, and trusted hospitals</p>
 
 
+                </div >
+                <div class="box-2">
+                    <img src="asset/images/Frame (2).png" alt="frame">
+                    <h4> Online pharmacy</h4>
+                    <p class="pra-2">Buy  your medicines with our mobile 
+                        application with a simple delivery system
+                        </p>
                 </div>
-                <div></div>
-                <div></div>
+                <div class="box-3">
+                    <img src="asset/images/Frame (3).png" alt="frame">
+                    <h4>Consultation</h4>
+                    <p class="pra-2">Free consultation with our trusted doctors and get the best recomendations</p>
+                    
+                </div>
                 <div></div>
                 <div></div>
                 <div></div>
