--- a/trafagra.html
+++ b/trafagra.html
@@ -3,26 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trafalgar</title>
+    <title>Document</title>
     <link rel="stylesheet" href="trafalgar.css">
 </head>
 <body>
-    <header>
-        <div class="left-div">
-            <img src="asset/images/logo.png" alt="tra">
-
-        </div>
-        <div class="right-div">
-            <ul>
-                <li><a href="#" style="color: #1F1534;"> Home</a></li>
-                <li><a href="#"> Find a doctor</a></li>
-                <li><a href="#">Apps</a></li>
-                <li><a href="#"> Testimonials</a></li>
-                <li><a href="#">About us</a></li>
-                </ul>
-             </div>
-
-    </header>
     
+
+
+
+
+    <section>
+        <div class="mask-con">
+            <div class="mask-1">
+                <img src="asset/images/Mask Group.png" alt="mask" class="mask-img">
+               <h5> Disease detection, check 
+    up in the laboratory</h5>
+    <p class="pra-4">In this case, the role of the health laboratory is very important to do
+    a disease detection...</p>
+    Read more
+    
+            </div>
+            <div class="mask-2">
+                <img src="asset/images/Mask Group (1).png" alt="mask" class="mask-img">
+               <h5>Herbal medicines that are safe for consumption</h5>
+               <p class="pra-4">Herbal medicine is very widely used at this time because of its very good for your health...</p>
+                  Read more
+            </div>
+            <div class="mask-3">
+                <img src="asset/images/Mask Group (2).png" alt="mask" class="mask-img">
+              <h5> Natural care for healthy 
+    facial skin</h5>
+    <p class="pra-4">A healthy lifestyle should start from now and also for your skin health.
+    There are some...</p>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
