--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
              consult with us which type of service is suitable for your health</p>
              </div>
     </section>
-    <section>
+    <section class="wall-box">
              <div class="box-con1">
                 <div class="box-2">
                <img src="asset/images/Frame (1).png" alt="frame">
