--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
             </ul>
             <button type="button" class="btn  get-button px-4 py-2">Get started a project</button>
 
-
           </div>
         </div>
       </nav>
@@ -241,7 +240,7 @@
       <div class="col col-12 col-sm-12 col-md-6">
         <div class="d-flex box-wid gap-4">
           <div>
-            <img src="asset/Icon (3).png" alt="" class="icon-img">
+            <img src="asset/Icon.png" alt="" class="icon-img">
           </div>
           <div  class="icon-s">
           <h5>Easy feedback sharing</h5>
@@ -262,7 +261,7 @@
     </div>
   </div>
 
-  <hr class="hr-1"> 
+  <!-- <hr class="hr-1">  -->
 
    <div class="container get-pro text-start py-5 px-5">
     <div class="row ">
@@ -371,7 +370,7 @@
        
       </div>
     </div>
-    <hr class="hr-1"> 
+    <!-- <hr class="hr-2">  -->
   <div class="container text-start  footer-main  px-5">
     <div class="row ">
       <div class="col d-flex gap-5">
